# mnist-ncnn

./: CMakeLists.txt  README.md  main.cpp
examples/: mnist.cpp  mnist.hpp
model/: mnist.onnx  ncnn.param
src/: CMakeLists.txt
src/mnist/: mnist_engine.cpp  mnist_engine.hpp
